# socrates-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.circleci/: config.yml
.github/workflows/: build.yml
src/: country.rs  lib.rs
src/generator/: denmark.rs  mod.rs
src/validator/: albania.rs  belgium.rs  bosniaherzegovina.rs  brazil.rs  bulgaria.rs  canada.rs  denmark.rs  france.rs  germany.rs  italy.rs  luxembourg.rs  mexico.rs  mod.rs  portugal.rs  spain.rs  usa.rs
src/validator/algorithms/: mod.rs
src/validator/date/: mod.rs
src/validator/regions/: mod.rs
src/validator/words/: mod.rs
tests/: integration_test.rs
