[package]
name = "socrates"
version = "0.1.0"
authors = ["SLourenco <sergio.lourenco@ist.utl.pt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
csv = "1.1"
serde = { version = "1", features = ["derive"] }