[package]
name = "socrates_rs"
version = "1.1.0"
authors = ["SLourenco <sergio.santos.lourenco@protonmail.com>"]
edition = "2018"
repository = "https://github.com/reducktion/socrates-rs"
readme = "README.md"
license = "MIT"
description = "Validate and Extract information from National Identification Numbers."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
csv = "1.1"
regex = "1.5.4"
serde = { version = "1", features = ["derive"] }
strum = "0.26.3"
strum_macros = "0.26.4"